tests/operator/negate_nonnum.rev
-"5" // error: can't use '-' token on anything other than an int or a float value